Updated read me file
Updated read me file

--- a/package.json
+++ b/package.json
@@ -33,4 +33,5 @@
     "type": "",
     "url": ""
   },
+  "description": "loopback project for creating models using sql server with one to one and one to many relationship"
 }
